--- a/FrameWork/.classpath
+++ b/FrameWork/.classpath
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="Test"/>
 	<classpathentry kind="src" path="res"/>
+	<classpathentry kind="src" path="gui"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="/home/gabe/Desktop/lib/slick.jar">
 		<attributes>
@@ -14,5 +14,9 @@
 			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="/home/gabe/Desktop/lib/lwjgl-2.8.5/native/linux"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="/home/gabe/Desktop/lib/twl/TWL.jar"/>
+	<classpathentry kind="lib" path="/home/gabe/Desktop/lib/twl/external-libs/xpp3-1.1.4c.jar"/>
+	<classpathentry kind="lib" path="/home/gabe/Desktop/slick/lib/jogg-0.0.7.jar"/>
+	<classpathentry kind="lib" path="/home/gabe/Desktop/slick/lib/jorbis-0.0.15.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
